--- a/app/src/components/main/main.scss
+++ b/app/src/components/main/main.scss
@@ -7,6 +7,11 @@
 
 .app-dark-mode{
 
+    
+    a{        
+        color: white;
+    }
+
     .mainContent{
 
         .social-how{
@@ -46,16 +51,11 @@
             }
 
         }
-    }    
+    }
 }
 
 
 .mainContent{
-
-    a{
-        
-        color: white;
-    }
 
     .high-yield-left{
         background-image: url('./rectangle-2.png');
@@ -82,6 +82,14 @@
 
     }
 
+    
+    @include media-breakpoint-down(sm) {
+      &.container{
+            padding-left:0px;
+            padding-right:0px;
+        }
+    }
+    
 
 
 }
